--- a/GuañaRobertoProgreso1/Views/Home/Index.cshtml
+++ b/GuañaRobertoProgreso1/Views/Home/Index.cshtml
@@ -2,10 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
+/*
+Add-Migration InitialCreate
+Update-Database
+•	Explicación:
+*/
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpUV_6VL06M444bKw2zZ_ARujlqgLbfhO_Pg&s" style="width: 300px; height: 300px;" alt="Meme" />
-    <button class="btn btninfo" onclick="alert('Mi nombre es Roberto Guaña y mi hobbie es Jugar video juegos');">Mostrar Info</button>
+    <button class="btn btninfo" onclick="alert('Mi nombre es Roberto Guaña y mi hobbie es Jugar video juegos y pasar tiempo con mis mascotas');">Mostrar Info</button>
 </div>
